@@ -71,4 +71,4 @@ The same variable is used in the full score (here in concert pitch):
 <h2>Learning more</h2>
 
 <a href="../download">Download</a> LilyPond and try the
-<a href="@DOC@v1.8/Documentation/user/out-www/lilypond/lilypond.html#Tutorial">tutorial</a>.
+<a href="@DOC@v2.2/Documentation/user/out-www/lilypond/Tutorial">tutorial</a>.
