@@ -1,3 +1,9 @@
+2004-04-14  Jan Nieuwenhuizen  <janneke@gnu.org>
+
+	* GNUmakefile (TAGS): New target.
+
+	*.html: Update some stale DOC@ (esp. v1.8) links.
+
 2004-04-06  Jan Nieuwenhuizen  <janneke@gnu.org>
 
 	* site/images/netbsd.jpg: 
